# Messy

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
message/: admin.py  conftest.py  factories.py  models.py  serializers.py  serializers_tests.py  urls.py  views.py  views_tests.py
message/management/commands/: create_data.py
message/migrations/: 0001_initial.py  0002_remove_message_uuid.py
messy/: asgi.py  settings.py  urls.py  wsgi.py
messy-cljs/: README.md  package-lock.json  package.json  project.clj
messy-cljs/resources/public/: index.html
messy-cljs/src/cljs/messy/: config.cljs  core.cljs  db.cljs  events.cljs  subs.cljs  views.cljs
