[tool.poetry]
name = "Messy"
version = "0.1.0"
description = ""
authors = ["Alexander Viklund <bullfest@sthlm.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "~=3.1.6"
djangorestframework = "~=3.12.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
